--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "gitHead": "7d119b5f91f35a0743193f5f2021be2c2aeb8e39",
   "dependencies": {
     "referee": "~0.11.1",
-    "lodash": "~1.0.0-rc.3"
+    "lodash": ">=1.0.0"
   },
   "devDependencies": {
     "buster": "0.6.12",
