--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "gitHead": "7d119b5f91f35a0743193f5f2021be2c2aeb8e39",
   "dependencies": {
     "referee": "~0.11.1",
+    "when": "~1.8.0",
     "lodash": ">=1.0.0"
   },
   "devDependencies": {
